--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
+    "serve-compat-db": "http-server site",
     "spec": "cross-env NODE_ENV=test npm run dir-remove && npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
     "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
@@ -68,6 +69,7 @@
     "flow-bin": "^0.41.0",
     "flow-runtime": "^0.8.0",
     "flow-typed": "^2.0.0",
+    "http-server": "^0.9.0",
     "jest-cli": "^19.0.2",
     "knex": "^0.12.7",
     "mocha": "^3.2.0",
