--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,20 @@ install:
   - yarn
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
 
+before_install:
+  - mysql -e 'CREATE DATABASE compat-db;'
+
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start &
   - sleep 3
+
+services:
+  - mysql
+
+test:
+  adapter: mysql2
+  database: compat-db
+  username: username
+  password: secret
+  encoding: utf8
