--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
     "view-compat-db": "http-server site",
-    "spec": "cross-env NODE_ENV=test npm run dir-remove && npm run migrate && jest",
+    "spec": "cross-env NODE_ENV=test npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
     "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
     "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
@@ -44,18 +44,20 @@
   ],
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "devDependencies": {
-    "babel-cli": "^6.23.0",
+    "babel-cli": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-flow-runtime": "^0.9.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.23.0",
+    "babel-register": "^6.24.0",
     "bluebird": "^3.5.0",
     "bookshelf": "^0.10.3",
     "caniuse-db": "1.0.30000634",
