--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "run-to-completion": "babel-node compat-tests/RunToCompletion",
     "spec": "cross-env NODE_ENV=test npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
+    "test-ci": "cross-env NODE_ENV=test npm run lint && npm run spec -- --maxWorkers=1",
     "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
     "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
     "view-compat-db": "http-server site",
