--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
     "migrate": "npm run dir-remove && babel-node ./src/database/Migrate",
-    "run-to-completion": "babel-node compat-tests/RunToCompletion",
+    "run-to-completion": "node -r babel-register compat-tests/setup.js && babel-node compat-tests/RunToCompletion",
     "spec": "cross-env NODE_ENV=test npm run migrate && jest",
     "test": "cross-env NODE_ENV=test npm run lint && npm run spec",
     "test-ci": "cross-env NODE_ENV=test npm run lint && npm run spec -- --maxWorkers=1",
@@ -47,9 +47,10 @@
   "homepage": "https://github.com/amilajack/compat-db#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-fail-explicit": "^0.0.4",
     "babel-plugin-flow-runtime": "^0.10.0",
     "babel-plugin-transform-async-to-bluebird": "^1.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -64,7 +65,7 @@
     "babel-register": "^6.24.0",
     "bluebird": "^3.5.0",
     "bookshelf": "^0.10.3",
-    "caniuse-db": "1.0.30000636",
+    "caniuse-db": "1.0.30000640",
     "chai": "^3.5.0",
     "chromedriver": "^2.28.0",
     "cross-env": "^3.2.4",
@@ -78,7 +79,7 @@
     "flow-typed": "^2.0.0",
     "http-server": "^0.9.0",
     "jest-cli": "^19.0.2",
-    "knex": "^0.12.8",
+    "knex": "^0.12.9",
     "mocha": "^3.2.0",
     "mysql": "^2.13.0",
     "nightmare": "^2.10.0",
