--- a/package.json
+++ b/package.json
@@ -90,8 +90,10 @@
     "flow-typed": "^2.5.1",
     "glow": "^1.2.2",
     "http-server": "^0.11.1",
+    "husky": "^1.3.1",
     "jest-cli": "^24.1.0",
     "knex": "0.16.3",
+    "lint-staged": "^8.1.5",
     "mocha": "^6.0.2",
     "mysql": "^2.16.0",
     "nightmare": "^3.0.1",
@@ -142,5 +144,18 @@
     "extends": [
       "bliss"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.{ts,js}": [
+        "eslint",
+        "git add"
+      ]
+    }
   }
 }
