--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint": "^5.15.0",
     "eslint-config-bliss": "^3.3.0",
     "eslint-plugin-flowtype-errors": "^4.0.0",
+    "expect": "^24.1.0",
     "flow-bin": "^0.94.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.5.1",
