--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rm -rf lib && mkdir lib && babel src/index.js --out-file lib/index.js",
-    "build-compat-db": "node -r babel-register compat-tests/setup.js && node -r babel-register compat-tests/Compat.js",
+    "build-compat-db": "node -r @babel/register compat-tests/setup.js && node -r @babel/register compat-tests/Compat.js",
     "dir-remove": "rm src/database/database.sqlite || true && touch src/database/database.sqlite",
     "flow": "glow",
     "flow-typed": "flow-typed install",
     "lint": "eslint --cache .",
     "migrate": "yarn dir-remove && babel-node ./src/database/Migrate",
-    "run-to-completion": "node -r babel-register compat-tests/setup.js && babel-node compat-tests/RunToCompletion",
+    "run-to-completion": "node -r @babel/register compat-tests/setup.js && babel-node compat-tests/RunToCompletion",
     "view-compat-db": "http-server site",
     "spec": "cross-env NODE_ENV=test yarn migrate && jest --detectOpenHandles",
     "test": "cross-env NODE_ENV=test yarn lint && yarn spec",
     "update-microsoft-catalog-api-db": "download https://raw.githubusercontent.com/MicrosoftEdge/APICatalogData/master/apicatalogdata.json && mkdir -p src/providers/api-catalog && mv apicatalogdata.json src/providers/microsoft-api-catalog/microsoft-api-catalog-data.json",
-    "validate-tmp-records": "node -r babel-register compat-tests/PostChecks.js",
+    "validate-tmp-records": "node -r @babel/register compat-tests/PostChecks.js",
     "version": "yarn build-compat-db && yarn build",
     "wdio": "wdio wdio.conf.js"
   },
