--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,17 @@ strategy:
 pool:
   vmImage: $(imageName)
 
+variables:
+  azureContainerRegistry: Contoso
+  azureSubscriptionEndpoint: Contoso
+
 steps:
+- task: DockerCompose@0
+  displayName: Container registry login
+  inputs:
+    containerregistrytype: Azure Container Registry
+    azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
+    azureContainerRegistry: $(azureContainerRegistry)
 - task: NodeTool@0
   inputs:
     versionSpec: '12.x'
